--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="Gökhan.png" alt="Gökhan Profil Picture"></td>
+            <td> <img src="gökhan.png" alt="Gökhan Profil Picture"></td>
             <td><h1>Gökhan Maktay</h1>
                 <p><em>Physiotherapist and <strong>Engineering Student</strong></em></p>
                 <p>I am working at Korpeo in Frankfurt am Main. I am studying web development.</p></td>
